--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
+    "firebase": "^8.6.8",
     "framer-motion": "^5.4.5",
     "next": "12.0.7",
     "react": "17.0.2",
