--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
+    "axios": "^0.24.0",
     "firebase": "^8.6.8",
     "framer-motion": "^5.4.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.0",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -27,6 +30,8 @@
     "@types/react": "^17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.43",
     "typescript": "^4.5.4"
   }
 }
